# serial-terminal

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: arg_helpers.rs  constants.rs  keyboard_input.rs  list_ports.rs  log_to_ui.rs  main.rs  menu.rs  serial_connection.rs
