[package]
name = "serial-terminal"
version = "0.0.0"
authors = ["J.P. Hutchins <jphutchins@gmail.com>"]
description = "A cross platform CLI for serial devices"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
const_format = "0.2.30"
crossterm = { version = "0.25.0", features = ["event-stream"] }
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
tokio-serial = "5.4.4"
